--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,10 @@
     "react-bootstrap-country-select": "^1.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "react-sweetalert2": "^0.6.0",
+    "sweetalert2": "^11.12.4",
+    "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
